--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -137,7 +137,7 @@
 
 .subscribe__checkbox {
   &:checked + .subscribe__agree::before {
-    background-image: url("../../img/check-icon.svg");
+    background-image: url("../img/check-icon.svg");
     background-position: center;
     background-repeat: no-repeat;
   }
