--- a/source/sass/page/main.scss
+++ b/source/sass/page/main.scss
@@ -13,7 +13,7 @@
   margin: 0;
   border: none;
   padding: 0;
-  background-image: url("../../img/icon-up.svg");
+  background-image: url("../img/icon-up.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-color: $color-aquamarine-blue;
